# stemmath

./: .gitignore  README.md  pyproject.toml
stemmath/: __init__.py  intersect.py  tools.py
tests/: test-intersections.py
tests/_.ufo/: fontinfo.plist  lib.plist
tests/_.ufo/glyphs/: contents.plist  dull_corner.glif  intersectionT_est.glif  test01.glif  test02.glif  test03.glif  test04.glif  test05.glif  test06.glif  test07.glif
